  * more english translations of console messages and further code beautifying.
  * fix #141: linbo manipulating the local start.conf when finding labels with same name.
  * fix #142: added start.conf examples for Ubuntu 20.04 with correct kernel and initrd paths.
  * fix #139: improved error handling in linbo_wrapper, linbo_cmd and linbo-remote.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 23 Nov 2020 13:58:45 +0100

linuxmuster-linbo (2.3.68-0) lmn7; urgency=low

  * fix #145: /boot and /boot/efi fail to be unmounted, subsequent partitioning fails.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 06 Nov 2020 19:24:10 +0100

linuxmuster-linbo (2.3.67-0) lmn7; urgency=low

  * lmn7: kernel update to 5.4.75.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 06 Nov 2020 14:52:18 +0100

linuxmuster-linbo (2.3.66-1) lmn7; urgency=low

  * lmn7: linbo-remote: fixes and improvements concerning to hostlists and the
    use of wol broadcast address, increased verbosity.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 08 Aug 2020 16:48:50 +0200

linuxmuster-linbo (2.3.66-0) lmn7; urgency=low

  * Fix linbo_wrapper, get_images(): improved getting image names from start.conf.
  * Fix #131: WOL improvement, new parameter -u for linbo-remote to use broadcast
    address additionally with wakeonlan.
  * added kmod, grub2-common & grub-efi-ia32-bin to build dependencies.
  * update to kernel 4.14.192.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 4 Aug 2020 19:40:00 +0200

linuxmuster-linbo (2.3.65-0) lmn7; urgency=low

  * Fix #136: Linbo fails when label exists (mk_parted zeroes the mbr before creating the partition table).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 21 Jul 2020 14:24:23 +0200

linuxmuster-linbo (2.3.64-0) lmn7; urgency=low

  * linbofs: rsync.exclude additions.
  * Fix #86: Added support for multiple individual hosts or IPs.
  * Fix #116: .postsync vanishes after sync.
  * Fix #48: udhcpc: dns labels can actually start with a number.
